--- a/03 Sequence Models/1 Neural Networks for Sentiment Analysis/assignment/C3_W1_Assignment.ipynb
+++ b/03 Sequence Models/1 Neural Networks for Sentiment Analysis/assignment/C3_W1_Assignment.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -93,7 +93,19 @@
     "id": "WOTfm2P0jCVt",
     "outputId": "d4903011-7268-4bea-ae35-ea3fd0b46311"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'trax'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/1d/6kzpcbz12cldlyz7v1jhp3mm0000gn/T/ipykernel_19544/2552919916.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# import relevant libraries\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtrax\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrax\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfastmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtrax\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mlayers\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtl\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'trax'"
+     ]
+    }
+   ],
    "source": [
     "import os \n",
     "import shutil\n",
@@ -551,19 +563,17 @@
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    # Process the tweet into a list of words\n",
     "    # where only important words are kept (stop words removed)\n",
-    "    word_l = None\n",
+    "    word_l = process_tweet(tweet)\n",
     "    \n",
     "    if verbose:\n",
     "        print(\"List of words from the processed tweet:\")\n",
     "        print(word_l)\n",
     "        \n",
     "    # Initialize the list that will contain the unique integer IDs of each word\n",
-    "    tensor_l = [] \n",
+    "    tensor_l = []\n",
     "    \n",
     "    # Get the unique integer ID of the __UNK__ token\n",
-    "    # GRADING NOTE: require the use of the variable, don't give credit for hard coding `2` as the unkown ID    \n",
-    "\n",
-    "    unk_ID = None\n",
+    "    unk_ID = vocab_dict[unk_token]\n",
     "    \n",
     "    if verbose:\n",
     "        print(f\"The unique integer ID for the unk_token is {unk_ID}\")\n",
@@ -574,11 +584,11 @@
     "        # Get the unique integer ID.\n",
     "        # If the word doesn't exist in the vocab dictionary,\n",
     "        # use the unique ID for __UNK__ instead.\n",
-    "        word_ID = None\n",
-    "    \n",
-    "        # Append the unique integer ID to the tensor list.\n",
-    "        tensor_l.append(word_ID)\n",
+    "        word_ID = vocab_dict[word] if word in vocab_dict else unk_ID\n",
     "    ### END CODE HERE ###\n",
+    "        \n",
+    "        # Append the unique integer ID to the tensor list.\n",
+    "        tensor_l.append(word_ID) \n",
     "\n",
     "    return tensor_l"
    ]
@@ -773,36 +783,35 @@
     "        ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "\n",
     "        # Second part: Pack n_to_take negative examples\n",
-    "\n",
+    "    \n",
     "        # Using the same batch list, start from neg_index and increment i up to n_to_take\n",
-    "        for i in range(None):\n",
+    "        for i in range(n_to_take):\n",
     "            \n",
-    "            # If the negative index goes past the negative dataset,\n",
-    "            if None\n",
+    "            # If the negative index goes past the negative dataset length,\n",
+    "            if neg_index >= len_data_neg:\n",
     "                \n",
     "                # If loop is set to False, break once we reach the end of the dataset\n",
     "                if not loop:\n",
-    "                    stop = True \n",
-    "                    break \n",
+    "                    stop = True;\n",
+    "                    break;\n",
     "                    \n",
     "                # If user wants to keep re-using the data, reset the index\n",
-    "                neg_index = None\n",
+    "                neg_index = 0\n",
     "                \n",
     "                if shuffle:\n",
     "                    # Shuffle the index of the negative sample\n",
     "                    rnd.shuffle(neg_index_lines)\n",
-    "                    \n",
-    "            # get the tweet as neg_index\n",
-    "            tweet = None\n",
+    "            # get the tweet as pos_index\n",
+    "            tweet = data_neg[neg_index_lines[neg_index]]\n",
     "            \n",
     "            # convert the tweet into tensors of integers representing the processed words\n",
-    "            tensor = None\n",
+    "            tensor = tweet_to_tensor(tweet, vocab_dict)\n",
     "            \n",
     "            # append the tensor to the batch list\n",
-    "            None\n",
+    "            batch.append(tensor)\n",
     "            \n",
     "            # Increment neg_index by one\n",
-    "            neg_index = None\n",
+    "            neg_index += 1\n",
     "\n",
     "        ### END CODE HERE ###        \n",
     "\n",
@@ -831,37 +840,37 @@
     "\n",
     "        ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "            # Get the number of positions to pad for this tensor so that it will be max_len long\n",
-    "            n_pad = None\n",
+    "            n_pad = max_len - len(tensor)\n",
     "            \n",
     "            # Generate a list of zeros, with length n_pad\n",
-    "            pad_l = None\n",
+    "            pad_l = [0]*n_pad\n",
     "            \n",
     "            # concatenate the tensor and the list of padded zeros\n",
-    "            tensor_pad = None\n",
+    "            tensor_pad = tensor + pad_l\n",
     "            \n",
     "            # append the padded tensor to the list of padded tensors\n",
-    "            None\n",
+    "            tensor_pad_l.append(tensor_pad)\n",
     "\n",
     "        # convert the list of padded tensors to a numpy array\n",
     "        # and store this as the model inputs\n",
-    "        inputs = None\n",
+    "        inputs = np.array(tensor_pad_l)\n",
     "  \n",
     "        # Generate the list of targets for the positive examples (a list of ones)\n",
     "        # The length is the number of positive examples in the batch\n",
-    "        target_pos = None\n",
+    "        target_pos = [1]*n_to_take\n",
     "        \n",
-    "        # Generate the list of targets for the negative examples (a list of zeros)\n",
+    "        # Generate the list of targets for the negative examples (a list of ones)\n",
     "        # The length is the number of negative examples in the batch\n",
-    "        target_neg = None\n",
+    "        target_neg = [0]*n_to_take\n",
     "        \n",
     "        # Concatenate the positve and negative targets\n",
-    "        target_l = None\n",
+    "        target_l = target_pos + target_neg\n",
     "        \n",
     "        # Convert the target list into a numpy array\n",
-    "        targets = None\n",
+    "        targets = np.array(target_l)\n",
     "\n",
     "        # Example weights: Treat all examples equally importantly.\n",
-    "        example_weights = None\n",
+    "        example_weights = np.ones_like(targets)\n",
     "        \n",
     "\n",
     "        ### END CODE HERE ###\n",
@@ -1113,7 +1122,7 @@
     "        '''\n",
     "        ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "        \n",
-    "        activation = None\n",
+    "        activation = np.maximum(x,0)\n",
     "\n",
     "        ### END CODE HERE ###\n",
     "        \n",
@@ -1285,7 +1294,7 @@
     "    def forward(self, x):        \n",
     "        ### START CODE HERE (Replace instances of 'None' with your code) ###        \n",
     "        # Matrix multiply x and the weight matrix\n",
-    "        dense = None\n",
+    "        dense = np.dot(x, self.weights) \n",
     "        \n",
     "        ### END CODE HERE ###\n",
     "        return dense\n",
@@ -1295,11 +1304,13 @@
     "        \n",
     "        ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "        # The input_signature has a .shape attribute that gives the shape as a tuple\n",
-    "        input_shape = None\n",
+    "        input_shape = input_signature.shape\n",
     "\n",
     "        # Generate the weight matrix from a normal distribution, \n",
     "        # and standard deviation of 'stdev'        \n",
-    "        w = None * trax.fastmath.random.normal(key = None, shape = (None, None))\n",
+    "        w = self._init_stdev * trax.fastmath.random.normal(\n",
+    "            key = random_key, shape = (input_shape[-1], self._n_units))\n",
+    "        \n",
     "                \n",
     "        ### END CODE HERE ###     \n",
     "        self.weights = w\n",
@@ -1645,32 +1656,31 @@
     "def classifier(vocab_size=9088, embedding_dim=256, output_dim=2, mode='train'):\n",
     "    \n",
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
-    "        \n",
     "    # create embedding layer\n",
-    "    embed_layer = tl.Embedding( \n",
-    "        vocab_size=None, # Size of the vocabulary\n",
-    "        d_feature=None # Embedding dimension\n",
-    "    ) \n",
+    "    embed_layer = tl.Embedding(\n",
+    "        vocab_size=vocab_size, # Size of the vocabulary\n",
+    "        d_feature=embedding_dim)  # Embedding dimension\n",
     "    \n",
     "    # Create a mean layer, to create an \"average\" word embedding\n",
-    "    mean_layer = None\n",
+    "    mean_layer = tl.Mean(axis=1)\n",
     "    \n",
     "    # Create a dense layer, one unit for each output\n",
-    "    dense_output_layer = tl.Dense(n_units = None)\n",
+    "    dense_output_layer = tl.Dense(n_units = output_dim)\n",
+    "\n",
     "    \n",
     "    # Create the log softmax layer (no parameters needed)\n",
-    "    log_softmax_layer = None\n",
+    "    log_softmax_layer = tl.LogSoftmax()\n",
     "    \n",
     "    # Use tl.Serial to combine all layers\n",
     "    # and create the classifier\n",
     "    # of type trax.layers.combinators.Serial\n",
-    "    model = tl.Serial( \n",
-    "      None # embedding layer\n",
-    "      None # mean layer\n",
-    "      None # dense output layer\n",
-    "      None # log softmax layer\n",
-    "    ) \n",
-    "    ### END CODE HERE ###\n",
+    "    model = tl.Serial(\n",
+    "      embed_layer,  # embedding layer\n",
+    "      mean_layer, # mean layer\n",
+    "      dense_output_layer, # dense output layer \n",
+    "      log_softmax_layer # log softmax layer\n",
+    "    )\n",
+    "### END CODE HERE ###    \n",
     "    \n",
     "    # return the model of type\n",
     "    return model"
@@ -1991,16 +2001,14 @@
     "    '''\n",
     "    rnd.seed(31) # Do NOT modify this random seed. This makes the notebook easier to replicate\n",
     "    \n",
-    "    ### START CODE HERE (Replace instances of 'None' with your code) ###          \n",
-    "    training_loop = training.Loop( \n",
-    "                                None, # The learning model\n",
-    "                                None, # The training task\n",
-    "                                eval_tasks=None, # The evaluation task\n",
-    "                                output_dir=None, # The output directory\n",
-    "                                random_seed=31 # Do not modify this random seed in order to ensure reproducibility and for grading purposes.\n",
-    "    ) \n",
+    "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
+    "    training_loop = training.Loop(\n",
+    "                                classifier,  # The learning model\n",
+    "                                train_task,  # The training task\n",
+    "                                eval_tasks = eval_task, # The evaluation task\n",
+    "                                output_dir = output_dir) # The output directory\n",
     "\n",
-    "    training_loop.run(n_steps = None)\n",
+    "    training_loop.run(n_steps = n_steps)\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    # Return the training_loop, since it has the model.\n",
@@ -2395,30 +2403,30 @@
     "    # True if the probability of positive sentiment is greater than\n",
     "    # the probability of negative sentiment\n",
     "    # else False\n",
-    "    is_pos = None\n",
+    "    is_pos =  preds[:, 1] > preds[:, 0] \n",
     "\n",
     "    # convert the array of booleans into an array of np.int32\n",
-    "    is_pos_int = None\n",
+    "    is_pos_int = is_pos.astype(np.int32)\n",
     "    \n",
     "    # compare the array of predictions (as int32) with the target (labels) of type int32\n",
-    "    correct = None\n",
+    "    correct = is_pos_int == y \n",
     "\n",
     "    # Count the sum of the weights.\n",
-    "    sum_weights = None\n",
+    "    sum_weights = np.sum(y_weights)\n",
     "    \n",
     "    # convert the array of correct predictions (boolean) into an arrayof np.float32\n",
-    "    correct_float = None\n",
+    "    correct_float = correct.astype(np.float32)\n",
     "    \n",
     "    # Multiply each prediction with its corresponding weight.\n",
-    "    weighted_correct_float = None\n",
+    "    weighted_correct_float = correct_float * y_weights\n",
     "\n",
     "    # Sum up the weighted correct predictions (of type np.float32), to go in the\n",
     "    # denominator.\n",
-    "    weighted_num_correct = None\n",
-    "    \n",
+    "    weighted_num_correct = np.sum(weighted_correct_float)\n",
+    " \n",
     "    # Divide the number of weighted correct predictions by the sum of the\n",
     "    # weights.\n",
-    "    accuracy = None\n",
+    "    accuracy = weighted_num_correct / sum_weights\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "    return accuracy, weighted_num_correct, sum_weights"
@@ -2553,30 +2561,30 @@
     "    for batch in generator: \n",
     "        \n",
     "        # Retrieve the inputs from the batch\n",
-    "        inputs = None\n",
+    "        inputs = batch[0]\n",
     "        \n",
     "        # Retrieve the targets (actual labels) from the batch\n",
-    "        targets = None\n",
+    "        targets = batch[1]\n",
     "        \n",
     "        # Retrieve the example weight.\n",
-    "        example_weight = None\n",
+    "        example_weight = batch[2]\n",
     "\n",
-    "        # Make predictions using the inputs            \n",
-    "        pred = None\n",
+    "        # Make predictions using the inputs\n",
+    "        pred = model(inputs)\n",
     "        \n",
     "        # Calculate accuracy for the batch by comparing its predictions and targets\n",
-    "        batch_accuracy, batch_num_correct, batch_num_pred = None\n",
-    "                \n",
+    "        batch_accuracy, batch_num_correct, batch_num_pred = compute_accuracy(pred, targets, example_weight) \n",
+    "        \n",
     "        # Update the total number of correct predictions\n",
     "        # by adding the number of correct predictions from this batch\n",
-    "        total_num_correct += None\n",
+    "        total_num_correct += batch_num_correct\n",
     "        \n",
     "        # Update the total number of predictions \n",
     "        # by adding the number of predictions made for the batch\n",
-    "        total_num_pred += None\n",
+    "        total_num_pred += batch_num_pred\n",
     "\n",
     "    # Calculate accuracy over all examples\n",
-    "    accuracy = None\n",
+    "    accuracy = total_num_correct / total_num_pred\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    return accuracy"
@@ -2849,7 +2857,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
