--- a/03 Sequence Models/2 Recurrent Neural Networks for Language Modeling/assignment/C3_W2_Assignment.ipynb
+++ b/03 Sequence Models/2 Recurrent Neural Networks for Language Modeling/assignment/C3_W2_Assignment.ipynb
@@ -316,16 +316,16 @@
     "    \n",
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    # for each character:\n",
-    "    for c in None\n",
+    "    for c in line:\n",
     "        \n",
     "        # convert to unicode int\n",
-    "        c_int = None\n",
+    "        c_int = ord(c)\n",
     "        \n",
     "        # append the unicode integer to the tensor list\n",
-    "        tensor.append(None)\n",
+    "        tensor.append(c_int)\n",
     "    \n",
     "    # include the end-of-sentence integer\n",
-    "    tensor.append(None)\n",
+    "    tensor.append(EOS_int)\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "\n",
@@ -475,58 +475,60 @@
     "    if shuffle:\n",
     "        rnd.shuffle(lines_index)\n",
     "    \n",
-    "    ### START CODE HERE ###\n",
+    "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    while True:\n",
-    "        \n",
-    "        # if the index is greater than or equal to the number of lines in data_lines\n",
-    "        if None:\n",
+    "        # if the index is greater or equal than to the number of lines in data_lines\n",
+    "        if index >= len(data_lines):\n",
     "            # then reset the index to 0\n",
-    "            index = None\n",
+    "            index = 0\n",
     "            # shuffle line indexes if shuffle is set to True\n",
     "            if shuffle:\n",
-    "                rnd.shuffle(lines_index) \n",
-    "                            \n",
+    "                rnd.shuffle(lines_index)\n",
+    "            \n",
     "        # get a line at the `lines_index[index]` position in data_lines\n",
-    "        line = None\n",
+    "        line = data_lines[lines_index[index]]\n",
+    "        #print(line)\n",
     "        \n",
     "        # if the length of the line is less than max_length\n",
-    "        if None:\n",
+    "        if len(line)<max_length:\n",
     "            # append the line to the current batch\n",
-    "            cur_batch.append(None)\n",
+    "            cur_batch.append(line)\n",
     "            \n",
     "        # increment the index by one\n",
-    "        index += None\n",
-    "        \n",
+    "        index += 1\n",
+    "        #print(cur_batch)\n",
     "        # if the current batch is now equal to the desired batch size\n",
-    "        if None:\n",
+    "        if len(cur_batch)==batch_size:\n",
     "            \n",
-    "            batch = None\n",
-    "            mask = None\n",
+    "            batch = []\n",
+    "            mask = []\n",
     "            \n",
     "            # go through each line (li) in cur_batch\n",
-    "            for li in None:\n",
+    "            for li in cur_batch:\n",
+    "                #print(li)\n",
     "                # convert the line (li) to a tensor of integers\n",
-    "                tensor = None\n",
+    "                tensor = line_to_tensor(li)\n",
     "                \n",
     "                # Create a list of zeros to represent the padding\n",
     "                # so that the tensor plus padding will have length `max_length`\n",
-    "                pad = [0] * (None)\n",
+    "                pad = [0] * (max_length - len(tensor))\n",
     "                \n",
     "                # combine the tensor plus pad\n",
-    "                tensor_pad = None\n",
+    "                tensor_pad = tensor + pad\n",
     "                \n",
     "                # append the padded tensor to the batch\n",
-    "                batch.append(None)\n",
+    "                batch.append(tensor_pad)\n",
     "\n",
-    "                # A mask for this tensor_pad is 1 whereever tensor_pad is not\n",
-    "                # 0 and 0 whereever tensor_pad is 0, i.e. if tensor_pad is\n",
+    "                # A mask for  tensor_pad is 1 wherever tensor_pad is not\n",
+    "                # 0 and 0 wherever tensor_pad is 0, i.e. if tensor_pad is\n",
     "                # [1, 2, 3, 0, 0, 0] then example_mask should be\n",
     "                # [1, 1, 1, 0, 0, 0]\n",
-    "                example_mask = None\n",
-    "                mask.append(example_mask) # @ KEEPTHIS\n",
+    "                # Hint: Use a list comprehension for this\n",
+    "                example_mask = [0 if item == 0 else 1 for item in tensor_pad]\n",
+    "                mask.append(example_mask)\n",
     "               \n",
-    "            # convert the batch (data type list) to a numpy array\n",
-    "            batch_np_arr = np.array(None)\n",
+    "            # convert the batch (data type list) to a trax's numpy array\n",
+    "            batch_np_arr = np.array(batch)\n",
     "            mask_np_arr = np.array(mask)\n",
     "            \n",
     "            ### END CODE HERE ##\n",
@@ -742,14 +744,14 @@
     "    Returns:\n",
     "        trax.layers.combinators.Serial: A GRU language model as a layer that maps from a tensor of tokens to activations over a vocab set.\n",
     "    \"\"\"\n",
-    "    ### START CODE HERE ###\n",
-    "    model = tl.Serial( \n",
-    "      None, # Stack the ShiftRight layer\n",
-    "      None, # Stack the embedding layer\n",
-    "      None, # Stack GRU layers of d_model units keeping n_layer parameter in mind (use list comprehension syntax)\n",
-    "      None, # Dense layer\n",
-    "      None, # Log Softmax\n",
-    "    ) \n",
+    "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
+    "    model = tl.Serial(\n",
+    "      tl.ShiftRight(), # Stack the ShiftRight layer\n",
+    "      tl.Embedding(vocab_size=vocab_size, d_feature=d_model), # Stack the embedding layer\n",
+    "      [tl.GRU(n_units=d_model) for _ in range(n_layers)], # Stack GRU layers of d_model units keeping n_layer parameter in mind (use list comprehension syntax)\n",
+    "      tl.Dense(n_units=vocab_size), # Dense layer\n",
+    "      tl.LogSoftmax() # Log Softmax\n",
+    "    )\n",
     "    ### END CODE HERE ###\n",
     "    return model\n"
    ]
@@ -977,31 +979,31 @@
     "        trax.supervised.training.Loop: Training loop for the model.\n",
     "    \"\"\"\n",
     "    \n",
-    "    ### START CODE HERE ###\n",
-    "    bare_train_generator = None\n",
-    "    infinite_train_generator = None\n",
+    "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
+    "    bare_train_generator = data_generator(batch_size, max_length, data_lines=lines)\n",
+    "    infinite_train_generator = itertools.cycle(bare_train_generator)\n",
     "    \n",
-    "    bare_eval_generator = None\n",
-    "    infinite_eval_generator = None\n",
-    "    \n",
-    "    train_task = training.TrainTask( \n",
-    "        labeled_data=None, # Use infinite train data generator\n",
-    "        loss_layer=None,   # Don't forget to instantiate this object\n",
-    "        optimizer=None     # Don't forget to add the learning rate parameter TO 0.0005\n",
-    "    ) \n",
-    "    \n",
-    "    eval_task = training.EvalTask( \n",
-    "        labeled_data=None,    # Use infinite eval data generator\n",
-    "        metrics=[None, None], # Don't forget to instantiate these objects\n",
-    "        n_eval_batches=3  # For better evaluation accuracy in reasonable time \n",
-    "    ) \n",
-    "    \n",
-    "    training_loop = training.Loop(model, \n",
-    "                                  train_task, \n",
-    "                                  eval_tasks=[eval_task], \n",
-    "                                  output_dir=output_dir) \n",
+    "    bare_eval_generator = data_generator(batch_size, max_length, data_lines=eval_lines)\n",
+    "    infinite_eval_generator = itertools.cycle(bare_eval_generator)\n",
+    "   \n",
+    "    train_task = training.TrainTask(\n",
+    "        labeled_data=infinite_train_generator, # Use infinite train data generator\n",
+    "        loss_layer=tl.CrossEntropyLoss(),   # Don't forget to instantiate this object\n",
+    "        optimizer=trax.optimizers.Adam(learning_rate=0.0005)     # Don't forget to add the learning rate parameter\n",
+    "    )\n",
     "\n",
-    "    training_loop.run(n_steps=None)\n",
+    "    eval_task = training.EvalTask(\n",
+    "        labeled_data=infinite_eval_generator,    # Use infinite eval data generator\n",
+    "        metrics=[tl.CrossEntropyLoss(), tl.Accuracy()], # Don't forget to instantiate these objects\n",
+    "        n_eval_batches=3      # For better evaluation accuracy in reasonable time\n",
+    "    )\n",
+    "    \n",
+    "    training_loop = training.Loop(model,\n",
+    "                                  train_task,\n",
+    "                                  eval_tasks=eval_task,\n",
+    "                                  output_dir=output_dir)\n",
+    "\n",
+    "    training_loop.run(n_steps=n_steps)\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
@@ -1122,18 +1124,16 @@
     "    Returns:\n",
     "        float: log_perplexity of the model.\n",
     "    \"\"\"\n",
-    "    ### START CODE HERE ###\n",
+    "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
+    "    total_log_ppx = np.sum(preds * tl.one_hot(target, preds.shape[-1]), axis= -1) # HINT: tl.one_hot() should replace one of the Nones\n",
     "\n",
-    "    log_p = np.sum(None * None, axis= -1) # HINT: tl.one_hot() should replace one of the Nones\n",
+    "    non_pad = 1.0 - np.equal(target, 0)          # You should check if the target equals 0\n",
+    "    ppx = total_log_ppx * non_pad                             # Get rid of the padding\n",
     "\n",
-    "    non_pad = 1.0 - np.equal(None, None)          # You should check if the target equals 0\n",
-    "    log_p = None * None                             # Get rid of the padding    \n",
-    "    \n",
-    "    log_ppx = np.sum(None, None) / np.sum(None, None) # Remember to set the axis properly when summing up\n",
-    "    log_ppx = np.mean(None) # Compute the mean of the previous expression\n",
-    "    \n",
+    "    log_ppx = np.sum(ppx) / np.sum(non_pad)\n",
     "    \n",
     "    ### END CODE HERE ###\n",
+    "    \n",
     "    \n",
     "    return -log_ppx"
    ]
