--- a/03 Sequence Models/3 LSTMs and Named Entity Recognition/assignment/C3_W3_Assignment.ipynb
+++ b/03 Sequence Models/3 LSTMs and Named Entity Recognition/assignment/C3_W3_Assignment.ipynb
@@ -379,56 +379,56 @@
     "                \n",
     "  ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "        \n",
-    "        # Copy into the temporal buffers the sentences in x[index] \n",
-    "        # along with their corresponding labels y[index]\n",
-    "        # Find maximum length of sentences in x[index] for this batch. \n",
+    "        # Copy into the temporal buffers the sentences in x[index : index + batch_size] \n",
+    "        # along with their corresponding labels y[index : index + batch_size]\n",
+    "        # Find maximum length of sentences in x[index : index + batch_size] for this batch. \n",
     "        # Reset the index if we reach the end of the data set, and shuffle the indexes if needed.\n",
-    "        max_len = 0 \n",
+    "        max_len = 0\n",
     "        for i in range(batch_size):\n",
     "             # if the index is greater than or equal to the number of lines in x\n",
     "            if index >= num_lines:\n",
     "                # then reset the index to 0\n",
-    "                index = None\n",
+    "                index = 0\n",
     "                # re-shuffle the indexes if shuffle is set to True\n",
     "                if shuffle:\n",
-    "                    rnd.shuffle(None)\n",
+    "                    rnd.shuffle(lines_index)\n",
     "            \n",
     "            # The current position is obtained using `lines_index[index]`\n",
     "            # Store the x value at the current position into the buffer_x\n",
-    "            buffer_x[i] = None\n",
+    "            buffer_x[i] = x[lines_index[index]]\n",
     "            \n",
     "            # Store the y value at the current position into the buffer_y\n",
-    "            buffer_y[i] = None\n",
+    "            buffer_y[i] = y[lines_index[index]]\n",
     "            \n",
-    "            lenx = None #length of current x[]\n",
+    "            lenx = len(x[lines_index[index]])    #length of current x[]\n",
     "            if lenx > max_len:\n",
-    "                max_len = None #max_len tracks longest x[]\n",
+    "                max_len = lenx                   #max_len tracks longest x[]\n",
     "            \n",
     "            # increment index by one\n",
-    "            index += None\n",
+    "            index += 1\n",
     "\n",
     "\n",
     "        # create X,Y, NumPy arrays of size (batch_size, max_len) 'full' of pad value\n",
-    "        X = None\n",
-    "        Y = None\n",
+    "        X = np.full((batch_size, max_len), pad)\n",
+    "        Y = np.full((batch_size, max_len), pad)\n",
     "\n",
     "        # copy values from lists to NumPy arrays. Use the buffered values\n",
     "        for i in range(batch_size):\n",
     "            # get the example (sentence as a tensor)\n",
     "            # in `buffer_x` at the `i` index\n",
-    "            x_i = None\n",
+    "            x_i = buffer_x[i]\n",
     "            \n",
     "            # similarly, get the example's labels\n",
     "            # in `buffer_y` at the `i` index\n",
-    "            y_i = None\n",
+    "            y_i = buffer_y[i]\n",
     "            \n",
     "            # Walk through each word in x_i\n",
     "            for j in range(len(x_i)):\n",
     "                # store the word in x_i at position j into X\n",
-    "                X[i, j] = None\n",
+    "                X[i, j] = x_i[j]\n",
     "                \n",
     "                # store the label in y_i at position j into Y\n",
-    "                Y[i, j] = None\n",
+    "                Y[i, j] = y_i[j]\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "        if verbose: print(\"index=\", index)\n",
@@ -592,12 +592,12 @@
     "        model - a trax serial model\n",
     "    '''\n",
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
-    "    model = tl.Serial( \n",
-    "      None, # Embedding layer\n",
-    "      None, # LSTM layer\n",
-    "      None, # Dense layer with len(tags) units\n",
-    "      None # LogSoftmax layer\n",
-    "      ) \n",
+    "    model = tl.Serial(\n",
+    "      tl.Embedding(vocab_size=vocab_size, d_feature=d_model), # Embedding layer\n",
+    "      tl.LSTM(n_units=d_model), # LSTM layer\n",
+    "      tl.Dense(n_units=len(tags)), # Dense layer with len(tags) units\n",
+    "      tl.LogSoftmax()  # LogSoftmax layer\n",
+    "      )\n",
     "      ### END CODE HERE ###\n",
     "    return model"
    ]
@@ -750,27 +750,26 @@
     "    '''\n",
     "### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    train_task = training.TrainTask(\n",
-    "      None, # A train data generator\n",
-    "      loss_layer = None, # A cross-entropy loss function\n",
-    "      optimizer = None # The adam optimizer\n",
-    "    ) \n",
+    "      train_generator, # A train data generator\n",
+    "      loss_layer = tl.CrossEntropyLoss(), # A cross-entropy loss function\n",
+    "      optimizer = trax.optimizers.Adam(0.01),  # The adam optimizer\n",
+    "    )\n",
     "\n",
     "    eval_task = training.EvalTask(\n",
-    "      labeled_data = None,  # A labeled data generator\n",
-    "      metrics = [None, None], # Evaluate with cross-entropy loss and accuracy\n",
-    "      n_eval_batches = None, # Number of batches to use on each evaluation\n",
+    "      labeled_data = eval_generator, # A labeled data generator\n",
+    "      metrics = [tl.CrossEntropyLoss(), tl.Accuracy()], # Evaluate with cross-entropy loss and accuracy\n",
+    "      n_eval_batches = 10 # Number of batches to use on each evaluation\n",
     "    )\n",
     "\n",
-    "    training_loop = training.Loop( \n",
-    "        None, # A model to train\n",
-    "        None, # A train task\n",
-    "        eval_tasks = [None], # The evaluation task\n",
-    "        output_dir = None # The output directory\n",
-    "    )\n",
+    "    training_loop = training.Loop(\n",
+    "        NER, # A model to train\n",
+    "        train_task, # A train task\n",
+    "        eval_tasks = eval_task, # The evaluation task\n",
+    "        output_dir = output_dir) # The output directory\n",
     "\n",
     "    # Train with train_steps\n",
-    "    training_loop.run(n_steps = None)\n",
-    "### END CODE HERE ###\n",
+    "    training_loop.run(n_steps = train_steps)\n",
+    "    ### END CODE HERE ###\n",
     "    return training_loop"
    ]
   },
@@ -1001,16 +1000,16 @@
     "    Outputs:\n",
     "        accuracy: float\n",
     "    \"\"\"\n",
-    "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
-    "## step 1 ##\n",
-    "    outputs = None\n",
+    "    #### START CODE HERE (Replace instances of 'None' with your code) ###\n",
+    "    ## step 1 ##\n",
+    "    outputs = np.argmax(pred, axis=2)\n",
     "    print(\"outputs shape:\", outputs.shape)\n",
     "\n",
-    "## step 2 ##\n",
-    "    mask = None\n",
+    "    ## step 2 ##\n",
+    "    mask = labels!=pad\n",
     "    print(\"mask shape:\", mask.shape, \"mask[0][20:30]:\", mask[0][20:30])\n",
-    "## step 3 ##\n",
-    "    accuracy = None\n",
+    "    ## step 3 ##\n",
+    "    accuracy = np.sum(outputs==labels)/float(np.sum(mask))\n",
     "    ### END CODE HERE ###\n",
     "    return accuracy\n"
    ]
